manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wormtail-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wormtail
  template:
    metadata:
      labels:
        app: wormtail
    spec:
      containers:
        - name: wormtail-container
          image: app-image
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: wormtail-configmap
            items:
              - key: config.yaml
                path: config.yaml
