manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warptail-service
spec:
  selector:
    app: warptail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
