manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wormtail-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"  
spec:
  rules:
    - host: wormtail.exceptionerror.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wormtail-service
                port:
                  number: 80
